--- a/JBE/JBE_7/.project
+++ b/JBE/JBE_7/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JDE_7</name>
+	<name>JBE_7</name>
 	<comment></comment>
 	<projects>
 	</projects>
